--- a/husky_ur3_navigation/config/costmap_global_laser.yaml
+++ b/husky_ur3_navigation/config/costmap_global_laser.yaml
@@ -1,7 +1,10 @@
 global_frame: odom
 rolling_window: true
 track_unknown_space: true
+inflation:
+    inflation_radius: 0.5
 
 plugins:
   - {name: obstacles_laser,           type: "costmap_2d::ObstacleLayer"}
   - {name: inflation,                 type: "costmap_2d::InflationLayer"}
+  - {name: virtual,                    type: "virtual_navigation_layers::VirtualLayer"}
