--- a/husky_ur3_navigation/config/costmap_global_static.yaml
+++ b/husky_ur3_navigation/config/costmap_global_static.yaml
@@ -1,7 +1,10 @@
 global_frame: map
-rolling_window: false
+rolling_window: true
 track_unknown_space: true
+inflation:
+    inflation_radius: 0.5
 
 plugins:
   - {name: static,                  type: "costmap_2d::StaticLayer"}
   - {name: inflation,               type: "costmap_2d::InflationLayer"}
+  - {name: virtual,                    type: "virtual_navigation_layers::VirtualLayer"}
